--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,9 @@
     "d3": "^7.0.0",
     "ajv": "^8.12.0"
   },
+  "devDependencies": {
+    "@types/d3": "^7.4.0"
+  },
   "browserslist": {
     "production": [
       ">0.2%",
