--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,14 @@ services:
       - ./backend:/app
     environment:
       - TZ=Asia/Tokyo
+      - POSTGRES_USER=user
+      - POSTGRES_PASSWORD=password
+      - POSTGRES_HOST=db
+      - POSTGRES_PORT=5432
+      - POSTGRES_DB=relationmap
+    depends_on:
+      - db
+    command: uvicorn main:app --host 0.0.0.0 --port 8000 --reload
   frontend:
     build: ./frontend
     ports:
@@ -17,6 +25,9 @@ services:
       - frontend_node_modules:/app/node_modules
     environment:
       - TZ=Asia/Tokyo
+      - REACT_APP_API_URL=http://localhost:8000
+    depends_on:
+      - backend
   db:
     image: postgres:15
     restart: always
