--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,17 +9,19 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
+    "ajv": "^8.12.0",
+    "d3": "^7.0.0",
+    "lodash": "^4.17.21",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-scripts": "^5.0.0",
-    "typescript": "^4.0.0",
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
-    "d3": "^7.0.0",
-    "ajv": "^8.12.0"
+    "typescript": "^4.0.0"
   },
   "devDependencies": {
-    "@types/d3": "^7.4.0"
+    "@types/d3": "^7.4.0",
+    "@types/lodash": "^4.17.23"
   },
   "browserslist": {
     "production": [
