--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,15 @@ env/
 
 # pytest
 .pytest_cache/
+*.xml
+coverage.xml
+
+# Playwright
+e2e-report/
+test-results/
+
+# Frontend coverage
+frontend/coverage/
 
 # Node
 node_modules/
