--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,9 @@
     "typescript": "^4.0.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.8.0",
+    "@testing-library/react": "^16.1.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/d3": "^7.4.0",
     "@types/lodash": "^4.17.23"
   },
