--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,7 @@ services:
       - frontend_node_modules:/app/node_modules
     environment:
       - TZ=Asia/Tokyo
-      - REACT_APP_API_URL=http://localhost:8000
+      - REACT_APP_API_URL=http://localhost:8000/api
     depends_on:
       - backend
   db:
